[workspace]
resolver = "2"
members = [
    "crates/*",
]

[workspace.package]
edition = "2024"

[workspace.dependencies]
# internal
haste_broadcast = { path = "crates/haste_broadcast", default-features = false }
haste_core = { path = "crates/haste_core" }
haste_vartype = { path = "crates/haste_vartype" }
# external
anyhow = "1.0.100"
bytes = "1.11.0"
dungers = { git = "https://github.com/deadlock-api/dungers.git", rev = "5e1e2aac76a027987911de3ef3d23ecfd992a7fb" }
dyn-clone = "1.0.20"
expect-test = "1.5.1"
hashbrown = { version = "0.16.1", default-features = false }
http = "1.4.0"
log = "0.4.29"
nohash = "0.2.0"
prost = "0.14.1"
reqwest = { version = "0.13.1", default-features = false }
serde = "1.0.228"
serde_json = "1.0.148"
snap = "1.1.1"
thiserror = "2.0.17"
valveprotos = { git = "https://github.com/deadlock-api/valveprotos-rs.git", rev = "22f44513a4945cb1f623877d9a6e939a542cc8d5", features = ["gc-client", "serde", "user-msgs"] }
tokio = { version = "1.48.0", default-features = false }
sync-unsafe-cell = "0.1.1"

[package]
name = "haste"
version = "0.0.0"
edition.workspace = true

[dependencies]
haste_broadcast.workspace = true
haste_core.workspace = true
