[package]
name = "haste_broadcast"
version = "0.0.0"
edition.workspace = true

[dependencies]
anyhow.workspace = true
bytes.workspace = true
haste_core.workspace = true
http.workspace = true
log.workspace = true
prost.workspace = true
reqwest = { workspace = true, features = ["gzip"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["time", "sync"] }
valveprotos.workspace = true
