[package]
name = "haste_core"
version = "0.0.0"
edition.workspace = true

[dependencies]
anyhow.workspace = true
dungers = { workspace = true, features = ["varint", "bitbuf"] }
dyn-clone.workspace = true
hashbrown = { workspace = true, features = ["inline-more"] }
haste_vartype.workspace = true
sync-unsafe-cell.workspace = true
nohash.workspace = true
prost.workspace = true
snap.workspace = true
thiserror.workspace = true
valveprotos.workspace = true
