[package]
name = "haste_core"
version = "0.0.0"
edition.workspace = true

[features]
# Async, source-driven streaming parser (AsyncStreamingParser + AsyncDemoStream
# implementations). Pulls in tokio and bytes.
async = ["dep:tokio", "dep:bytes"]

[dependencies]
anyhow.workspace = true
dungers = { workspace = true, features = ["varint", "bitbuf"] }
dyn-clone.workspace = true
hashbrown = { workspace = true, features = ["inline-more"] }
haste_vartype.workspace = true
sync-unsafe-cell.workspace = true
nohash.workspace = true
prost.workspace = true
snap.workspace = true
thiserror.workspace = true
valveprotos.workspace = true

bytes = { workspace = true, optional = true }
tokio = { workspace = true, features = ["io-util", "sync"], optional = true }
